--- a/build.gradle
+++ b/build.gradle
@@ -7,12 +7,13 @@ buildscript {
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath('se.transmode.gradle:gradle-docker:1.2')
     }
 }
 
 apply plugin: 'java'
-apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'docker'
 
 group = 'com.phone'
 version = '0.0.1-SNAPSHOT'
@@ -27,13 +28,33 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-actuator')
     compile('org.springframework.boot:spring-boot-actuator-docs')
     compile('org.springframework.boot:spring-boot-starter-aop')
-    compile('org.springframework.boot:spring-boot-starter-data-rest')
-    compile('org.springframework.data:spring-data-rest-hal-browser')
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('com.google.guava:guava:23.0')
+
     runtime('org.springframework.boot:spring-boot-devtools')
     runtime('org.hsqldb:hsqldb')
+
     compileOnly('org.projectlombok:lombok')
+
     testCompile('org.springframework.boot:spring-boot-starter-test')
+}
+
+task buildDocker(type: Docker) {
+    baseImage = 'java:8'
+    push = project.hasProperty('push')
+    tag = 'phone/app'
+    addFile {
+        from jar
+        rename {'app.jar'}
+    }
+    entryPoint(['java', '-Djava.security.egd=file:/dev/./urandom', '-jar', '/app.jar'])
+    exposePort(8080)
+}
+
+buildDocker.dependsOn(build)
+
+
+springBoot {
+    executable = true
 }
